--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,5 @@ edition = "2018"
 
 [dependencies]
 percent-encoding = "2.1.0"
-reqwest = "0.9.24"
+reqwest = { version = "0.11.8", features = ["blocking", "gzip"] }
 ajson = "0.2.4"
